--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   get: ^4.6.6
   http: ^1.2.0
   webview_flutter: ^4.8.0
+  firebase_auth: ^4.7.3
+  firebase_core: ^2.15.1
+  google_sign_in: ^6.2.1
+  firebase_messaging: ^14.7.10
 
 dev_dependencies:
   flutter_test:
