--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   firebase_core: ^2.15.1
   google_sign_in: ^6.2.1
   firebase_messaging: ^14.7.10
+  image_picker: ^1.1.2
+  path_provider: ^2.1.5
+  cloud_firestore: ^4.17.5
+  firebase_storage: ^11.6.5
 
 dev_dependencies:
   flutter_test:
