--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -8,6 +8,8 @@ plugins {
     id "dev.flutter.flutter-gradle-plugin"
 }
 
+apply plugin: 'com.google.gms.google-services'
+
 android {
     namespace = "com.example.e_qurban"
     compileSdk = flutter.compileSdkVersion
@@ -44,4 +46,9 @@ android {
 
 flutter {
     source = "../.."
+}
+
+dependencies {
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.android.gms:play-services-auth:20.0.0' // versi sesuai dengan kebutuhan
 }
